--- a/_includes/lib/mathjax.html
+++ b/_includes/lib/mathjax.html
@@ -1,10 +1,13 @@
 <script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  jax: ["input/TeX","input/MathML","input/AsciiMath","output/CommonHTML"],
-  extensions: ["tex2jax.js","mml2jax.js","asciimath2jax.js","MathMenu.js","MathZoom.js","AssistiveMML.js", "a11y/accessibility-menu.js"],
-  TeX: {
-    extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
-  }
-});
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js", "AMSmath.js", "AMSsymbols.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { fonts: ["TeX"] }
+  });
 </script>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
